# trabalho-ml

./: pyproject.toml  trabalho-01.ipynb  trabalho02.ipynb
data/: dados_tratados.parquet
